demo/basic/constraints/all_ns_gatekeeper_label_unique.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueLabel
metadata:
  name: ns-gk-label-unique
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    label: gatekeeper
